################################################################################
# OpenSceneGraph - Graphics Framework
################################################################################

CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

PROJECT( CORAL_OSG )

################################################################################
# Setup Coral
################################################################################

# Load Coral's CMake package
file( TO_CMAKE_PATH "$ENV{CORAL_ROOT}" CORAL_ROOT_ENV )
set( CMAKE_MODULE_PATH "${CORAL_ROOT}/cmake" "${CORAL_ROOT_ENV}/cmake" ${CMAKE_MODULE_PATH} )
find_package( Coral REQUIRED )

SET( CORAL_PATH
	"${CMAKE_BINARY_DIR}/modules"
	"${CMAKE_SOURCE_DIR}/modules"
	${CORAL_PATH}
)

################################################################################
# Installation
################################################################################

# install shared library
INSTALL( DIRECTORY ${CMAKE_BINARY_DIR}/modules/coOsg DESTINATION modules )

# install CSL files
INSTALL( DIRECTORY ${CMAKE_SOURCE_DIR}/modules/ DESTINATION modules )

################################################################################
# Packaging
################################################################################

SET( CPACK_PACKAGE_NAME					"coral-osg" )
SET( CPACK_PACKAGE_VERSION_MAJOR		"0" )
SET( CPACK_PACKAGE_VERSION_MINOR		"1" )
SET( CPACK_PACKAGE_VERSION_PATCH		"0" )
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY	"A module for integrating [OpenSceneGraph](http://openscenegraph.org/) into Coral" )

INCLUDE( CPack )

################################################################################
# Subdirectories
################################################################################

ADD_SUBDIRECTORY( src )

#ENABLE_TESTING()
#ADD_SUBDIRECTORY( tests )
